# fastbotty

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GEMINI.md  Makefile  README.md  RELEASE_NOTES.md  RELEASE_NOTES.md.example  llms.txt  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: FUTURE.md  PUBLISHING.md  RELEASE_COMMANDS.md  TODO.md  USAGE.md
examples/: README.md  invoice_config.yaml  invoice_only.yaml  invoice_with_template.yaml  test_invoice.sh
fastbotty/: __init__.py  __version__.py
fastbotty/cli/: __init__.py  commands.py
fastbotty/core/: __init__.py  bot.py  config.py  interfaces.py  registry.py
fastbotty/formatters/: __init__.py  base.py  markdown.py  plain.py
fastbotty/server/: __init__.py  app.py  routes.py
fastbotty/utils/: __init__.py  escape.py  validators.py
scripts/: README.md  bump_version.py  release.sh  setup_dev.sh  test_release.sh
templates/: README.md.template  config.yaml.template  main.py.template
templates/plugins/: example_formatter.py.template
tests/: conftest.py  test_bot.py  test_buttons.py  test_config.py  test_escape.py  test_formatters.py  test_invoice.py  test_link_formatting.py  test_new_message_types.py  test_registry.py  test_reply_keyboards.py
